# grasp-plugin

./: ProjectHome.md
grasp-plugin/: CMakeCache.txt
grasp-plugin/Grasp/: CMakeLists.txt  GraspBar.cpp  GraspBar.h  GraspPluginManager.h  GraspSceneBody.h  VectorMath.h
grasp-plugin/GraspConsumer/: GraspRtcBar.h
grasp-plugin/GraspConsumer/GraspPlan20100909/: DirectBodyLoader.cpp
grasp-plugin/GraspConsumer/rtc/: GraspControllerSVC_impl.cpp  GraspControllerSkel.cpp  GraspControllerSkel.h
grasp-plugin/GripperManipulation/: CollisionPair.cpp  ManipBar.h  ManipController.cpp  ManipPlugin.cpp  RobotLocalFunctions.cpp  RobotLocalFunctions.h
grasp-plugin/GripperManipulation/PRM/: W0.yaml
grasp-plugin/PRM/: mpkConfigChecker.cpp  mpkRobots.h  sblPlanner.h  tspCity.h
grasp-plugin/RobotInterface/: HIROControllerRtc.cpp
grasp-plugin/RobotInterface/HIROControllerRTC/: HIROController.h  HIROControllerSK.cc  (+1 more)
grasp-plugin/VisionTrigger/: CMakeLists.txt  VisionTriggerBar.cpp  VisionTriggerPlugin.cpp
graspPlugin/: CMakeLists.txt
graspPlugin/EditModel/: CMakeLists.txt  EditModelPlugin.cpp
graspPlugin/Grasp/: Arm.cpp  CMakeLists.txt  ConvexAnalysis.h  Finger.cpp  ForceClosureTest.cpp  ForceClosureTest.h  GraspBar.cpp  GraspController.cpp  GraspController.h  GraspPlugin.cpp  GraspPluginManager.cpp  PlanBase.cpp  PlanBase.h  exportdef.h  readtext.h
graspPlugin/GraspConsumer/: GraspControllerSVC_impl.cpp
graspPlugin/GraspConsumer/rtc/: GraspConsumer.cpp  GraspControllerStub.cpp
graspPlugin/GripperManipulation/: CMakeLists.txt  CollisionPair.h  ManipBar.cpp  ManipController.cpp  ManipController.h
graspPlugin/GripperManipulation/PRM/: W4.yaml  table-can2.yaml
graspPlugin/GripperManipulation/project/: arrow.wrl  worldexpo.cnoid
graspPlugin/ImageWidgetSample/: CMakeLists.txt  exportdecl.h
graspPlugin/PRM/: CMakeLists.txt  PlanInterface.cpp  TrajectoryBar.h  TrajectoryPlanner.cpp  TrajectoryPlanner.h  mpkPathSmoother.cpp  mpkPathSmoother.h  sblPlanner.cpp  sblRn.cpp  sblTree.cpp  tsp.h  tspTour.h
graspPlugin/RobotInterface/: ArmControllerRtc.h  CMakeLists.txt  RobotInterface.cpp  RobotInterface.h
graspPlugin/RobotInterface/ArmControllerRtc/: HiroNX.hh  HiroNXSK.cc  ManipulatorCommonInterface_Common.hh  ManipulatorCommonInterface_Common.idl  ManipulatorCommonInterface_CommonStub.cpp  ManipulatorCommonInterface_CommonStub.h  ManipulatorCommonInterface_DataTypes.idl  ManipulatorCommonInterface_MiddleLevel.idl  ManipulatorCommonInterface_MiddleLevelSK.cc  ManipulatorCommonInterface_MiddleLevelStub.h
graspPlugin/RobotInterface/HIROControllerRTC/: HIROController.hh  HIROControllerStub.cpp  HiroNXSkel.h  HiroNXStub.cpp  RTC.xml
graspPlugin/RobotModels/HIRO/: HIRO.yaml
graspPlugin/RobotModels/HIRO/Plugin/: CMakeLists.txt  hand_range.diff
graspPlugin/RobotModels/PA10/Plugin/: CMakeLists.txt  GrasplotPluginPA10.cpp  GrasplotPluginPA10.h
graspPlugin/RosInterfaceSample/Sample/: HelloWorldPlugin.cpp  manifest.xml
graspPlugin/RosInterfaceSample/Sample/launch/: turtulemimic.launch
graspPlugin/RosInterfaceSample/Sample/src/: add_two_ints_client.cpp  talker.cpp
graspPlugin/Samples/Object/: ahiruLow.wrl  hole.wrl  objList.txt  table-can.wrl
graspPlugin/VisionTrigger/: CMakeLists.txt  VisionTriggerRtcController.h
trunk/grasp-plugin/GraspConsumer/: CMakeLists.txt  GraspRtcPlugin.cpp
trunk/grasp-plugin/GraspConsumer/GraspPlanSmartPalLeft/: GraspController.idl  GraspPlanningImpl.cpp
trunk/grasp-plugin/RobotInterface/: CMakeLists.txt  HIROControllerRtc.h  RobotInterfacePlugin.cpp
trunk/grasp-plugin/RobotInterface/HIROControllerRTC/: HIROController.cpp  HIROController.hh  HIROControllerComp.cpp  HIROControllerStub.h
trunk/grasp-plugin/RosInterfaceSample/Sample/: CMakeLists.txt  mainpage.dox
trunk/grasp-plugin/RosInterfaceSample/Sample/src/: add_two_ints_server.cpp
trunk/graspPlugin/: CMakeLists.txt
trunk/graspPlugin/Grasp/: Arm.cpp  Arm.h  Finger.h  ForceClosureTest.cpp  ForceClosureTest.h  GraspBar.cpp  GraspBar.h  GraspController.cpp  GraspController.h  GraspPluginManager.cpp  PlaceController.cpp  PlanBase.cpp  PlanBase.h  VectorMath.cpp
trunk/graspPlugin/GraspConsumer/: CMakeLists.txt  GraspConsumer.h  GraspRtcController.cpp  GraspRtcController.h
trunk/graspPlugin/GraspConsumer/GraspPlan20100909/: GraspPlanningImpl.cpp
trunk/graspPlugin/GraspConsumer/GraspPlanSmartPalLeft/: DirectBodyLoader.cpp
trunk/graspPlugin/GraspConsumer/rtc/: GraspConsumer.h  GraspControllerSVC_impl.h  GraspControllerStub.h
trunk/graspPlugin/GripperManipulation/: ClusterParameter.cpp  ClusterParameter.h  ManipController.cpp  ManipController.h  ManipPlugin.cpp  PlacePlanner.cpp  PlacePlanner.h
trunk/graspPlugin/ImageWidgetSample/: CMakeLists.txt  ImageWidgetPlugin.cpp
trunk/graspPlugin/PRM/: CMakeLists.txt  PlanInterface.h  TrajectoryBar.cpp  TrajectoryPlanner.cpp  TrajectoryPlugin.cpp  mpkConfigChecker.h  mpkPathSmoother.cpp  mpkRobots.cpp  mpkRobots.h  sblPlanner.cpp
trunk/graspPlugin/RobotInterface/: CMakeLists.txt  RobotInterface.h  RobotInterfaceBar.cpp  RobotInterfaceBar.h  RobotInterfacePlugin.cpp
trunk/graspPlugin/RobotInterface/ArmControllerRtc/: HIROController.hh  HIROControllerSK.cc  HIROControllerStub.cpp  HIROControllerStub.h  HiroNXStub.cpp  HiroNXStub.h  ManipulatorCommonInterface_CommonSK.cc  ManipulatorCommonInterface_MiddleLevel.hh  ManipulatorCommonInterface_MiddleLevelStub.cpp
trunk/graspPlugin/RobotInterface/HIROControllerRTC/: HIROController.idl  HIROControllerSK.cc  HIROControllerStub.cpp  HIROControllerStub.h  HiroNXStub.h  Makefile.HIROController
trunk/graspPlugin/RobotModels/HIRO/Plugin/: CMakeLists.txt  GrasplotPluginHIRO.cpp  GrasplotPluginHIRO.h  fs_offset.diff
trunk/graspPlugin/RobotModels/PA10/Plugin/: GrasplotPluginPA10.h
trunk/graspPlugin/RosInterfaceSample/: README
trunk/graspPlugin/Samples/: pa10.cnoid
trunk/graspPlugin/Samples/Object/: W4Hrp.wrl  table-canhrp.wrl
trunk/graspPlugin/VisionTrigger/: VisionTriggerBar.h
trunk/graspPlugin/VisionTrigger/rtc/: VisionRecognitionTrigger.cpp  VisionRecognitionTrigger.h
(+23 files in other folders)
